Remove 'UML' from Vision Globale section title

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
       <section style="position:relative;">
         <h2 class="section-title" style="border-bottom:2px dotted #d4b483; padding-bottom:10px; width: fit-content;">
           <span class="i blue" aria-hidden="true">⎇</span>
-          1. Vision Globale des Relations (UML)
+          1. Vision Globale des Relations
         </h2>
 
         <div class="diagram-wrap">
